<resources>
    <string name="app_name">Empresa</string>

    <string name="welcome">BEM-VINDO AO EMPRESAS</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
    <string name="entrar">Entrar</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="invalid_data">Email ou senha inválidos!</string>
    <string name="no_internet">Verifique sua conexão com a internet!</string>
    <string name="cannot_login">Não foi possível realizar o login!</string>
    <string name="search_hint">Pesquisar</string>
    <string name="action_searchable_activity">searchable</string>
    <string name="search_empty">Não foram encontrados resultados!</string>
    <string name="click_on_search_to_start">Clique na busca para iniciar.</string>
</resources>
