<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context="com.empresa.jlvg89.empresa.LoginActivity">

    <ProgressBar
        android:id="@+id/pb_login_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminate="true"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="532.5dp"
        android:layout_marginEnd="87.5dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="62.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051"
        android:contentDescription="image"
        app:srcCompat="@drawable/logo_home" />

    <TextView
        android:id="@+id/tv_login_welcome"
        android:layout_marginBottom="437dp"
        android:layout_marginEnd="106.5dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="156dp"
        android:layout_width="146.5dp"
        android:layout_height="47dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="@color/charcoal_grey"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268"
        android:text="@string/welcome" />

    <TextView
        android:id="@+id/tv_login_lorem"
        android:layout_width="273dp"
        android:layout_height="47dp"
        android:layout_marginBottom="381.5dp"
        android:layout_marginEnd="43.5dp"
        android:layout_marginStart="43.5dp"
        android:layout_marginTop="219.5dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="3.5sp"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/charcoal_grey"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215" />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="298.5dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="317.5dp"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="248.5dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="368dp"
        android:drawableStart="@drawable/ic_cadeado"
        android:hint="@string/password"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_login_login"
        android:layout_width="270dp"
        android:layout_height="44dp"
        android:layout_marginBottom="171.5dp"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="424.5dp"
        android:background="@color/greeny_blue"
        android:textColor="#FFF"
        android:text="@string/entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</android.support.constraint.ConstraintLayout>
